# Konstruct

./: CMakeLists.txt  main.cpp
.github/workflows/: codeql.yml
config/: globals.yaml
config/cpp/: config.yaml
include/: BaseHandler.ixx  CLIHandler.ixx  ConfHandler.ixx  ParseOption.ixx  Parser.ixx  REPL.ixx  REPLHandler.ixx  Token.ixx  Utility.ixx
